tests/semantic/fail/iteration_statement_nonscalar_expression.c
struct S {int i;} s;

int main(void) {
  while (s) {
    s.i = 0;
  }
  return 0;
}
